Input and button alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,7 @@ body {
 
 .phasesList > p {
   color: #435a85;
-  /* border: 1px solid black; */
   border: 1px solid rgba(200, 200, 200, 1);
-  /* border-radius: 202px; */
   box-shadow: 0 1px 1.5px 1px rgba(161, 161, 161, 0.4);
   padding-left: 3%;
   padding-top: 3%;
@@ -62,29 +60,36 @@ body {
   margin-top: 1%;
   width: 100%;
   height: auto;
+  position: relative;
 }
 
-.addContainer > input {
-  margin-right: 10px;
+.input {
+  color: #435a85;
+  margin-right: 5px;
   text-align: center;
   font-size: 3rem;
   font-weight: 200;
   min-width: 200px;
   max-width: 145px;
   height: 50px;
+  outline: 0;
 }
 
-.addContainer > button {
-  /* font-size: 16px; */
+.addButton {
+  color: #435a85;
+  background-color: rgba(255, 255, 255, 0.213);
+  position: absolute;
+  height: 55px;
   padding: 12px 16px;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: 300;
   cursor: pointer;
+  outline: 0;
 }
 button > i {
-  /* width: 20px;
-  height: 20px; */
   margin-right: 10px;
 }
-.addContainer > button:hover {
-  /* background-color: rgba(255, 255, 255, 0.213); */
+button:hover {
+  color: #435a85;
+  background-color: rgba(235, 251, 255, 0.624);
 }
